# cloud-modeling

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml  cmake.yml
config/: cloud.yaml  resources.yaml  specs.yaml
src/: CMakeLists.txt
src/client/: CMakeLists.txt  cli.cpp  cli.h  client.cpp  rpc-client.cpp  rpc-client.h
src/core/: CMakeLists.txt  actor-register.h  cloud-manager.cpp  cloud-manager.h  config.cpp  config.h  manager.cpp  manager.h  resource-scheduler.h  rpc-scheduler.h  rpc-service.cpp  rpc-service.h  scheduler.cpp  scheduler.h  vm-storage.cpp  vm-storage.h  world.cpp  world.h
src/custom/: CMakeLists.txt  custom-code.h  util.h
src/custom/cloud-schedulers/: place-to-first.cpp  place-to-first.h
src/custom/server-schedulers/: greedy.h
src/custom/workload-models/: constant.h  random-uniform.h
src/events/: CMakeLists.txt  actor-register.h  actor.h  event-loop.cpp  event-loop.h  event.h  observer.h
src/infrastructure/: CMakeLists.txt  cloud.cpp  cloud.h  data-center.cpp  data-center.h  resource-register.cpp  resource-register.h  resource.cpp  resource.h  server.cpp  server.h  vm-storage.cpp  vm-storage.h  vm.cpp  vm.h
src/protocol/: CMakeLists.txt  api.proto  scheduler.proto
src/resources/: CMakeLists.txt  data-center.cpp  data-center.h  resource.h  server.cpp  server.h
src/simulator/: CMakeLists.txt  simulator.cpp
src/util/: CMakeLists.txt  file-utils.h  logger.cpp  logger.h  types.h
